docs: update about migration to jfx