@@ -8,15 +8,16 @@ This document provides guidance for developers working on the War Management Sys
 warManagement/
 ├── src/                           # Source code
 │   ├── com/
-│   │   └── warManagementGUI/      # Java GUI components
-│   │       ├── DataAnalysis/      # Charts and data visualization
+│   │   └── warManagementGUI/      # JavaFX GUI components
+│   │       ├── DataAnalysis/      # JavaFX Charts and data visualization
 │   │       ├── Equipment/         # Equipment management
 │   │       ├── Mission/           # Mission management
 │   │       ├── Personnel/         # Personnel management
 │   │       ├── Supply/            # Supply management
 │   │       ├── Units/             # Units management
 │   │       ├── util/              # Utilities and helpers
-│   │       └── WarManagement.java # Main application class
+│   │       ├── WarManagement.java # Controller class 
+│   │       └── WarManagementApp.java # JavaFX Application main class
 │   └── pics/                      # Images and icons
 ├── mission_predictor/             # Python-based mission prediction
 │   ├── mission_predictor_api.py   # Flask API for predictions
@@ -25,17 +26,17 @@ warManagement/
 │   └── train_ann_model.py         # Model training script
 ├── docs/                          # Documentation
 ├── Queries.sql                    # Database schema and queries
-├── pom.xml                        # Maven project configuration
+├── pom.xml                        # Maven project configuration with JavaFX dependencies
 └── requirements.txt               # Python visualization dependencies
 ```
 
 ## Development Environment Setup
 
-### 1. Java Development
+### 1. JavaFX Development
 
 #### IDE Setup
 
-We recommend using IntelliJ IDEA or Eclipse for Java development.
+We recommend using IntelliJ IDEA or Eclipse for JavaFX development.
 
 **IntelliJ IDEA Setup**:
 
@@ -44,6 +45,8 @@ We recommend using IntelliJ IDEA or Eclipse for Java development.
 3. Navigate to the warManagement directory
 4. Select the pom.xml file and click "Open"
 5. Choose "Open as Project"
+6. Go to "File > Project Structure > Libraries" and ensure JavaFX libraries are properly added
+7. Add VM Options for JavaFX modules if needed: `--module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml`
 
 **Eclipse Setup**:
 
@@ -52,16 +55,22 @@ We recommend using IntelliJ IDEA or Eclipse for Java development.
 3. Choose "Maven > Existing Maven Projects"
 4. Navigate to the warManagement directory
 5. Click "Finish"
+6. Install the "e(fx)clipse" plugin if not already present
+7. Configure build path to include JavaFX modules
 
-#### Java Coding Standards
+#### JavaFX Coding Standards
 
 - Follow standard Java naming conventions:
   - Classes: PascalCase (e.g., `PersonnelDetails`)
-  - Methods and variables: camelCase (e.g., `getPersonnelDetails`)
+  - Methods and variables: camelCase (e.g., `getPersonnelDetails`) 
   - Constants: UPPER_SNAKE_CASE (e.g., `MAX_PERSONNEL_COUNT`)
+  - FXML files: PascalCase matching controller class names (e.g., `PersonnelView.fxml`)
 - Include JavaDoc comments for all public methods
 - Use inheritance and interfaces appropriately
 - Handle exceptions properly
+- Use FXML for view definitions when possible, separating view from controller logic
+- Follow the MVC (Model-View-Controller) pattern for JavaFX components
+- Use CSS for styling JavaFX components instead of inline styles
 
 ### 2. Python Development
 
@@ -105,14 +114,17 @@ For database development:
 
 ## Testing
 
-### Java Testing
+### JavaFX Testing
 
 - Use JUnit for unit testing Java components
+- For JavaFX UI components, use TestFX framework
 - Create tests in the `src/test/java` directory
 - Run tests using Maven:
   ```bash
   mvn test
   ```
+- Use `Platform.runLater` when testing JavaFX UI components
+- Reference the `ChartMigrationTest.java` file for examples of testing JavaFX charts
 
 ### Python Testing
 
@@ -125,20 +137,22 @@ For database development:
 
 ## Building and Deployment
 
-### Java Application
+### JavaFX Application
 
-- Build the Java application using Maven:
+- Build the JavaFX application using Maven:
   ```bash
   mvn clean package
   ```
-- Run the application:
+- Run the application using JavaFX Maven plugin:
   ```bash
-  java -jar target/warManagement-1.0.0-SNAPSHOT.jar
+  mvn javafx:run
   ```
-  or
+- Alternatively, run the application with JavaFX modules explicitly:
   ```bash
-  mvn exec:java
+  java --module-path PATH_TO_JAVAFX_MODULES --add-modules javafx.controls,javafx.fxml -jar target/warManagement-1.0.0-SNAPSHOT.jar
   ```
+
+Note: Replace `PATH_TO_JAVAFX_MODULES` with the path to your JavaFX SDK lib directory.
 
 ### Python Components
 
